fix: change title

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jogos inclusivos" />
-    <title>Jogos inclusivos</title>
+    <meta name="description" content="Jogos educacionais" />
+    <title>Aprenda Brincando</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
